
# Note: This crate must be built using do.sh

[package]
name = "diy_etf"
version = "0.0.1"
description = "diy etf"
authors = ["Paul"]
repository = "https://github.com/paul-schaaf/diy_etf"
license = "MIT"
homepage = "https://github.com/paul-schaaf/diy_etf"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
thiserror = "1.0.21"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
solana-program="1.4.4"
spl-token = {version = "3.0.0", default-features = false, features = ["no-entrypoint"]}
serum-pool = {version = "0.1.2", git = "https://github.com/paul-schaaf/custom-pool", default-features = false, branch = "main"}
serum-pool-schema = { git = "https://github.com/paul-schaaf/custom-pool", default-features = false, branch = "main"}

[lib]
name = "diy_etf"
crate-type = ["cdylib", "lib"]
